--- a/react-project/src/assets/css/main.css
+++ b/react-project/src/assets/css/main.css
@@ -34,7 +34,7 @@
     height: 40px;
     display: flex;
     justify-content: center;
-    font-size: 1.5rem;
+    font-size: 2rem;
     border-radius: 50%;
     background: rgba(28, 17, 41, 0.88);
   }
@@ -59,7 +59,6 @@
   .right-header{
     display: flex;
     justify-content: space-between;
-
   }
   .right-header{
     margin-right: 2rem;
@@ -76,4 +75,11 @@
     padding-top: 1rem;
   }
 
+  .dropdown{
+    cursor: pointer;
+  }
+
+  .dropdown-profile{
+    margin: 1rem;
+  }
   
