--- a/react-project/src/assets/css/main.css
+++ b/react-project/src/assets/css/main.css
@@ -83,3 +83,13 @@
     margin: 1rem;
   }
   
+  .cards-img{
+    width: 40px;
+    border-radius: 50%;
+
+  }
+
+  .home-space{
+    display: flex;
+    justify-content: space-evenly;
+  }
